Simplify workaround for MySQL clients with broken mysql_insert_id()

Some MySQL client versions have broken mysql_insert_id() function. Return
value of that function is reset to zero after calling mysql_ping() function
or after issuing SQL query which receive result set.

Seems that MySQL bug #89139 is not going to be fixed, but rather
documentation was changed about this "unexpected" behavior.

So instead of trying to detect which version of MySQL client is broken and
trying to workaround it by updating internal structure, call function
mysql_insert_id() only at time when it returns correct value and then store
it into dbh cache. On subsequent access just read cached value.

With this solution there is no needed to have tons of #ifdefs and cache is
used for all versions of MySQL and MariaDB clients.

See: https://bugs.mysql.com/bug.php?id=89139
See: https://dev.mysql.com/doc/refman/8.0/en/mysql-insert-id.html